# slackbeatz

./: .gitignore  LICENSE  README.md  SlackBeatz.ino  pyproject.toml
docs/: design-tts-sampler.md
examples/: basic.sb  dark_sunday.sb  deep_set.sb  goa.sb  jungle.sb  mall.sb  phuture.sb  polymeter.sb  studio.sb  style_tour.sb  template_test.sb
examples/composed/: acid_trax_forever.sb  cosmic_mushroom_dance.sb  hello_world.sb  honeydew_ms20_sunset.sb  jungle_rolling_neurofunk.sb  krew_analogue_voltage.sb  lonely_night_in_berlin.sb  molten_analogue_sequencer_vibes.sb  smoke_and_fog_submerged.sb  sunset_over_plaza.sb  uk_2step_london_garage.sb  vintage_juno_voltage_dreams.sb
examples/rendered/: basic.mid  dark_sunday.mid  deep_set.mid  goa.mid  jungle.mid  mall.mid  phuture.mid  polymeter.mid  style_tour.mid
slackbeatz/: __init__.py  __main__.py  audio.py  audio_offline.py  audio_offline_presets.py  cli.py  clock_emitter.py  compose.py  export.py  gui.py  live_runtime.py  player.py  sampler.py  surge_host.py  synthhost.py  tts.py
slackbeatz/ableton/: __init__.py  macro_presets.py  osc_client.py  push.py
slackbeatz/drums/: presets.py
slackbeatz/dsl/: ast.py  lexer.py  parser.py
slackbeatz/engine/: clock.py  clock_source.py  event.py  feel_apply.py  lfo_apply.py  midifile.py  scheduler.py
slackbeatz/generators/: __init__.py  _shared.py  base.py  defaults.py  feel.py  registry.py
tests/: test_acid_authenticity.py  test_audio_offline_presets.py  test_byte_identical_after_refactor.py  test_compose.py  test_dsl.py  test_engine.py  test_examples.py  test_lfo.py  test_per_part_algorithm.py  test_resolve.py  test_scene_block.py  test_setup_serialize.py  test_ui_diagnostics.py  test_ui_state.py
tools/: _phase3_rename.py
(+173 files in other folders)
