[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slackbeatz"
version = "0.1.0"
description = "Chance-driven MIDI song generator with a small DSL, tuned for techno on hardware synths"
readme = "README.md"
license = "MIT"
authors = [{ name = "Jonno Downes", email = "jonnosan@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]
dependencies = [
    "mido>=1.3",
    "python-rtmidi>=1.5",
    # Drives external synths (surge-xt-cli) over OSC for live knob tweaking
    # from the slackbeatz Tk GUI.
    "python-osc>=1.9",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
# In-process WAV sampler (channels 5 + 11). Optional because the
# headless `play` / `render` / `audio` paths don't need it — only
# `--surge`-routed live playback does. See
# `docs/design-tts-sampler.md`.
sampler = [
    "sounddevice>=0.4",   # audio output stream
    "soundfile>=0.12",    # WAV decode
    "numpy>=1.24",        # mixing buffer
]
# Local Piper TTS — speech generator synthesises phrases into the
# sampler bank. See `slackbeatz/tts.py`. pedalboard adds the
# meditation-studio post-FX chain (issue #30).
tts = [
    "piper-tts",
    "pedalboard>=0.9",
]

[project.scripts]
slackbeatz = "slackbeatz.cli:main"

[project.urls]
Homepage = "https://github.com/jonnosan/slackbeatz"

[tool.hatch.build.targets.wheel]
packages = ["slackbeatz"]

[tool.hatch.build.targets.wheel.force-include]
"slackbeatz/setups" = "slackbeatz/setups"
